# teepot

./: .gitignore  .travis.yml  Makefile.am  README.md  configure.ac  teepot.c
man/man1/: teepot.1
tests/: Makefile.am  teepot.test  test_tp.c
