#
# Copyright (c) 2014,2015 Genome Research Ltd.
# Author: Rob Davies <rmd+github@sanger.ac.uk>
#
# This file is part of teepot.
#
# Teepot is free software: you can redistribute it and/or modify it under
# the terms of the GNU General Public License as published by the Free Software
# Foundation; either version 3 of the License, or (at your option) any later
# version.
# This program is distributed in the hope that it will be useful, but WITHOUT
# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
# FOR A PARTICULAR PURPOSE. See the GNU General Public License for more
# details.
# You should have received a copy of the GNU General Public License along with
# this program. If not, see <http://www.gnu.org/licenses>

SUBDIRS = tests

ACLOCAL_AMFLAGS = -I m4

bin_PROGRAMS = teepot

teepot_SOURCES = teepot.c

teepot_LDADD = -lm

dist_man1_MANS = man/man1/teepot.1
